@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2011 the original author or authors.
+ * Copyright 2002-2012 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -101,6 +101,7 @@ import org.springframework.web.util.WebUtils;
  *
  * @author Arjen Poutsma
  * @author Juergen Hoeller
+ * @author Rossen Stoyanchev
  * @since 3.0
  * @see ViewResolver
  * @see InternalResourceViewResolver
@@ -117,6 +118,9 @@ public class ContentNegotiatingViewResolver extends WebApplicationObjectSupport 
 
 	private static final UrlPathHelper urlPathHelper = new UrlPathHelper();
 
+	static {
+		urlPathHelper.setUrlDecode(false);
+	}
 
 	private int order = Ordered.HIGHEST_PRECEDENCE;
 
@@ -270,7 +274,7 @@ public class ContentNegotiatingViewResolver extends WebApplicationObjectSupport 
 				String name = viewResolvers.get(i).getClass().getName() + i;
 				getApplicationContext().getAutowireCapableBeanFactory().initializeBean(viewResolvers.get(i), name);
 			}
-			
+
 		}
 		if (this.viewResolvers.isEmpty()) {
 			logger.warn("Did not find any ViewResolvers to delegate to; please configure them using the " +
@@ -351,13 +355,13 @@ public class ContentNegotiatingViewResolver extends WebApplicationObjectSupport 
 							}
 						}
 					}
-					List<MediaType> mediaTypes = new ArrayList<MediaType>(compatibleMediaTypes);
-					MediaType.sortByQualityValue(mediaTypes);
+					List<MediaType> selectedMediaTypes = new ArrayList<MediaType>(compatibleMediaTypes);
+					MediaType.sortBySpecificityAndQuality(selectedMediaTypes);
 					if (logger.isDebugEnabled()) {
-						logger.debug("Requested media types are " + mediaTypes + " based on Accept header types " +
+						logger.debug("Requested media types are " + selectedMediaTypes + " based on Accept header types " +
 								"and producible media types " + producibleMediaTypes + ")");
 					}
-					return mediaTypes;
+					return selectedMediaTypes;
 				}
 				catch (IllegalArgumentException ex) {
 					if (logger.isDebugEnabled()) {
@@ -392,14 +396,12 @@ public class ContentNegotiatingViewResolver extends WebApplicationObjectSupport 
 	}
 
 	/**
-	 * Returns the more specific media type using the q-value of the first media type for both.
+	 * Return the more specific of the acceptable and the producible media types
+	 * with the q-value of the former.
 	 */
-	private MediaType getMostSpecificMediaType(MediaType type1, MediaType type2) {
-		double quality = type1.getQualityValue();
-		Map<String, String> params = Collections.singletonMap("q", String.valueOf(quality));
-		MediaType t1 = new MediaType(type1, params);
-		MediaType t2 = new MediaType(type2, params);
-		return MediaType.SPECIFICITY_COMPARATOR.compare(t1, t2) <= 0 ? type1 : type2;
+	private MediaType getMostSpecificMediaType(MediaType acceptType, MediaType produceType) {
+		produceType = produceType.copyQualityValue(acceptType);
+		return MediaType.SPECIFICITY_COMPARATOR.compare(acceptType, produceType) < 0 ? acceptType : produceType;
 	}
 
 	/**
